<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="70dp"
        android:src="@drawable/delete_normal"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/edit_input_bg"
        android:gravity="center">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/phone_number"
            android:textColor="@color/banhei"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/phone_hint"
            android:textColorHint="@color/gray_dan"
            android:textSize="18sp"
            android:inputType="number" />
    </LinearLayout>

    <TextView
        android:id="@+id/find_phonenum_err"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/red_pressed"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/edit_input_bg"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/newpassword"
            android:textColor="@color/banhei"
            android:textSize="18sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/newpassword_hint"
            android:textColorHint="@color/gray_dan"
            android:textSize="18sp"
            android:inputType="textPassword" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/eyes_close"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/edit_input_bg"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/verification_code"
            android:textColor="@color/banhei"
            android:textSize="18sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/verification_code_hint"
            android:textColorHint="@color/gray_dan"
            android:textSize="18sp"
            android:inputType="number" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:background="@drawable/bt_code_bg"
            android:textSize="16sp"
            android:text="@string/verification_code_send"/>
    </LinearLayout>
    <TextView
        android:id="@+id/find_code_err"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/red_pressed"
        android:layout_gravity="center" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_toolbar_gardient"
        android:text="@string/reset_password"
        android:textSize="18sp" />

</LinearLayout>